--- a/sample-android/src/main/res/layout/activity_example.xml
+++ b/sample-android/src/main/res/layout/activity_example.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.krenvpravo.viewbinder.ExampleActivity">
+    tools:context=".ExampleActivity">
 
     <TextView
         android:id="@+id/example_activity_hello_text"
