--- a/sample-android/src/main/res/layout/fragment_example.xml
+++ b/sample-android/src/main/res/layout/fragment_example.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_example_header_text"/>
+        android:id="@+id/fragment_example_header_text"
+        tools:text="title text"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_example_button"/>
+        android:id="@+id/fragment_example_button"
+        tools:text="button text"/>/>
 </LinearLayout>
