--- a/sample-androidx/src/main/res/layout/activity_androidx.xml
+++ b/sample-androidx/src/main/res/layout/activity_androidx.xml
@@ -13,7 +13,7 @@
         android:id="@+id/activity_example_header_text"
         tools:text="Hello World!" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:id="@+id/activity_compat_recycler"
